edited the draft

--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,7 @@
 \fancyfoot{}
 % above two commands remove the default numbering
 %next place the title in Capital leters and italics to the Left of the Page
-\fancyhead[L]{\slshape\MakeUppercase{Place Title Here}}
+\fancyhead[L]{\slshape{Oral exam paper}}
 %now place student's name to the right
 \fancyhead[R]{\slshape Mary Sylvia Agwang}
 \fancyfoot[C]{\thepage} %put back page numbers
@@ -121,17 +121,15 @@
 %\include{chapters/methodology}
 \input{chapters/methodology}
 
+%\include{chapters/nextsteps}
+\input{chapters/simulation}
+
 %\include{chapters/interpretation}
 \input{chapters/specific_implementation}
 
 
-%\include{chapters/nextsteps}
-\input{chapters/simulation_and_results}
-
-
-
 %\include{chapters/conclusion}
-\input{chapters/real_world_data_results}
+\input{chapters/results}
 
 
 \input{chapters/discussion}
