edited oral paper

--- a/main2.tex
+++ b/main2.tex
@@ -90,7 +90,6 @@
 \newtheorem{Ex}{Example}
 %add a shortcut to make vectors bold
 \newcommand{\vect}[1]{\boldsymbol{#1}}
-\newcommand{\Bm}[1]{\textbf{#1}}
 %abbreviations
 \DeclareMathOperator{\E}{\mathbb{E}}
 \DeclareMathOperator{\R}{\mathbb{R}}
@@ -113,30 +112,32 @@
 %\clearpage
 \setcounter{page}{1}
 
-\newpage
 
 %\include{chapters/introduction}
 \input{chapters/introduction}
 
 
 %\include{chapters/objectives}
-\input{chapters/previouswork}
+%\input{chapters/previouswork}
+
+%\include{chapters/methodology}
+%\input{chapters/methodology}
 
 
 %\include{chapters/interpretation}
-\input{chapters/dimensionality_reduction}
+%\input{chapters/dimensionality_reduction}
 
 %\include{chapters/nextsteps}
-\input{chapters/current_project}
+%\input{chapters/simulation}
 
 %\include{chapters/conclusion}
-\input{chapters/results}
+%\input{chapters/results}
 
 
-\input{chapters/discussion}
+%\input{chapters/discussion}
 
 
-\input{chapters/future_work}
+%\input{chapters/future_work}
 
 
 %%%%%%%%%%%%%%%% Generate a Bibliography%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
