added dim reduction

--- a/main.tex
+++ b/main.tex
@@ -88,6 +88,7 @@
 \newtheorem{Cor}{Corollary}
 \newtheorem{Rem}{Remark}
 \newtheorem{Ex}{Example}
+\newtheorem{proof}{Proof}
 %add a shortcut to make vectors bold
 \newcommand{\vect}[1]{\boldsymbol{#1}}
 \newcommand{\Bm}[1]{\textbf{#1}}
