added diffusion algorithm

--- a/main.tex
+++ b/main.tex
@@ -127,16 +127,16 @@
 %\include{chapters/interpretation}
 \input{chapters/dimensionality_reduction}
 
-%\include{chapters/nextsteps}
+%%\include{chapters/nextsteps}
 \input{chapters/current_project}
-
-%\include{chapters/conclusion}
+%
+%%\include{chapters/conclusion}
 \input{chapters/results}
-
-
+%
+%
 \input{chapters/discussion}
-
-
+%
+%
 \input{chapters/future_work}
 
 
