--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,8 @@
 %packages for typing maths stuff
 \usepackage{amsfonts, amsmath, amssymb, latexsym, mathrsfs}
 \usepackage{lipsum}
-
+%load some packages to include the appendix
+\usepackage[toc,page]{appendix}
 
 % package for Maths tools
 \usepackage{mathtools}
@@ -171,8 +172,8 @@
 
 
 \appendix
-
+\begin{appendices}
 \input{chapters/appendix}
-
+\end{appendices}
 
 \end{document}
