cloned oral project to mac

--- a/main.tex
+++ b/main.tex
@@ -15,9 +15,9 @@
 %add two packages to add tables and graphics
 \usepackage[pdftex]{graphicx} %load the graphics package
 \usepackage{epstopdf} % Convert epstopdf
-\graphicspath{{/home/tesylvia/Oral_Sept_2017/images}} %add a path to the image 
-\graphicspath{{/home/tesylvia/Oral_Sept_2017/images/FakeBrain-plots}} %add a path to the image
-%\graphicspath{{/home/tesylvia/Oral_Sept_2017/images/FakeBrain-plots}}
+\graphicspath{{./images}} %add a path to the image 
+\graphicspath{{./images/FakeBrain-plots}} %add a path to the image
+%\graphicspath{{./images/FakeBrain-plots}}
 %add path to images
 \usepackage{float}
 %add package for multiple figures/subfigures
@@ -163,7 +163,7 @@
 
 %add a bibliography using mendeley
 
-\bibliography{/home/tesylvia/Oral_Sept_2017/References/library.bib}
+\bibliography{./References/library.bib}
 
 \bibliographystyle{unsrt}
 
