edited current project

--- a/main.tex
+++ b/main.tex
@@ -53,7 +53,7 @@
 \fancyfoot{}
 % above two commands remove the default numbering
 %next place the title in Capital leters and italics to the Left of the Page
-\fancyhead[L]{\slshape{Oral exam paper}}
+\fancyhead[L]{\slshape{Masters thesis paper}}
 %now place student's name to the right
 \fancyhead[R]{\slshape Mary Sylvia Agwang}
 \fancyfoot[C]{\thepage} %put back page numbers
