edited current project

--- a/main.tex
+++ b/main.tex
@@ -147,10 +147,10 @@
 \input{chapters/current_project}
 %
 %%\include{chapters/conclusion}
-\input{chapters/results}
+\input{chapters/results_and_interpretation}
 %
 %
-\input{chapters/discussion}
+\input{chapters/future_direction}
 %
 %
 %\input{chapters/future_work}
