--- a/main.tex
+++ b/main.tex
@@ -1,13 +1,27 @@
 %Latex template designed from scratch by Mary Sylvia %Agwang following a great Youtube video %by Michelle Krummel:
 
 \documentclass[11pt]{article}
-%set margins to 1in
-\usepackage[margin=1in]{geometry}
+%set margins to as stipulated in masters thesis requirements
+
+%% set the page margins as required by the umn Master's thesis formatting
+\usepackage{geometry}
+\newgeometry{
+    top=1in,
+    bottom=1in,
+    right=1in,
+    left=1.5in,
+}
+
+
+%\usepackage[margin=1in]{geometry}
 %packages for typing maths stuff
 \usepackage{amsfonts, amsmath, amssymb, latexsym, mathrsfs}
 \usepackage{lipsum}
 %load some packages to include the appendix
 \usepackage[toc,page]{appendix}
+
+%add a copyright package
+\usepackage{textcomp}
 
 % package for Maths tools
 \usepackage{mathtools}
@@ -49,24 +63,42 @@
 
 \pagestyle{fancy}
 %next clear the default header and footer
-\fancyhead{}
-\fancyfoot{}
+ \fancyhead{}
+ \fancyfoot{}
 % above two commands remove the default numbering
 %next place the title in Capital leters and italics to the Left of the Page
-\fancyhead[L]{\slshape{Masters thesis paper}}
-%now place student's name to the right
-\fancyhead[R]{\slshape Mary Sylvia Agwang}
+
+%%%%% remove any writing from top and bottom of margins
+
+% \fancyhead[L]{\slshape{Masters thesis paper}}
+
+%%%%%%% now place student's name to the right
+
+% \fancyhead[R]{\slshape Mary Sylvia Agwang}
+
+
 \fancyfoot[C]{\thepage} %put back page numbers
 %the commented commands below remove the ruled lines
 % at the header and foot
-%\renewcommand{\headrulewidth}{0pt}
-%\renewcommand{\footrulewidth}{0pt}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
 
 %The uncommented string of commands in this section (==) % make the headers appear on each page
 
 %===end of setting the headers======================%
 
-\parindent 0ex
+%\parindent 0ex
+
+\parindent 0pt
+\parskip 1ex
+\renewcommand{\baselinestretch}{2}
+
+
+%The first two of these commands alter the paragraph formatting so that new paragraphs 
+% are not indented but separated from the previous one by a small amount of whitespace; the third sets the line spacing.
+
+
+%%%%%%%%% comment for commands below %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %removes paragraphs from sections
 %adjust the paragraphs automatically without indendantation in latex
 %====spacing description===========================
@@ -83,7 +115,12 @@
 }
 
 
+
+%%%%%%%%% Must include this to get neat paragraphs %%%%%%%%%%%%%%%%%%%%%%%%
 \renewcommand{\baselinestretch}{1} 
+
+
+
 %other ways to adjust paragraphs are commented
 %\setlength{\parindent}{4em}
 %\setlength{\parskip}{1em}
@@ -111,18 +148,58 @@
 %package for an appendix
 \usepackage[toc,page]{appendix}
 
-
 %start writing the content in here
 \begin{document}
 
 
+%include the titlepage
+\input{chapters/titlepage.tex}
+
+
+%include the copyright page
+\input{chapters/copyrightpage.tex}
+
+
+%include acknowledgement page
+\input{chapters/Acknowledgement.tex}
+
+%include the copyright page
+\input{chapters/dedication}
+
+
+%include the abstract
+\input{chapters/abstract.tex}
+
+
+
+\newpage
+
+%%%  Question: how do i remove the numbering off the abstract page??????
+
 
 %\include{chapters/coverpage}
 
-\input{chapters/coverpage}
+% \input{chapters/coverpage}
+
+%%%%%%%%%% Include acknowledgement in table of contents %%%%%%%%%%%%%%%%%%%%%
+
+%% number the acknowledgements, Dedication and abstract using roman numerals
+
+\pagenumbering{roman}
+
+\addcontentsline{toc}{section}{Acknowledgement}
+\setcounter{page}{1}
+
+\addcontentsline{toc}{section}{Dedication}
+
+\addcontentsline{toc}{section}{Abstract}
+
 
 
 \tableofcontents
+
+\pagenumbering{arabic}
+
 \thispagestyle{empty}
 \clearpage
 \setcounter{page}{1}
